[package]
name = "belsin"
version = "0.1.0"
authors = ["peddly <hnsidewinder513@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# doryen-rs="*"
rltk = { version = "0.8.1" }
specs = "0.16.1"
specs-derive = "0.4.1"
